<resources>
    <string name="app_name">Minesweeper Legacy</string>

    <string name="splashScreenText">Developed by Artyom Zyev</string>

    <!-- Version -->
    <string name="appStageName">Beta</string>

    <!-- For alert dialogues -->
    <string name="alertClear">This action will clear all your scores.\n
    Accept it?</string>
    <string name="buttonClearCancel">Cancel</string>
    <string name="buttonClearAccept">Accept</string>

    <!-- Toasts -->
    <string name="backToastText">Repeat again to exit</string>
    <string name="backPresets">Repeat again to quit presets</string>
    <string name="clearScoresTextTrue">Scores are now cleared</string>
    <string name="toastReturn">Repeat again to stop your game</string>

    <!-- Menu buttons -->
    <string name="menuButtonPlay">Play</string>
    <string name="menuButtonSettings">Settings</string>
    <string name="menuButtonScores">Scores</string>
    <string name="settingsButtonClear">Clear Scores</string>
    <string name="settingsButtonAbout">About app</string>

    <!-- Headers -->
    <string name="modeSelectText">Select mode:</string>
    <string name="presetsText">Set presets:</string>
    <string name="settingsHeader">Settings:</string>
    <string name="scoresHeader">Scores:</string>
    <string name="fullScoresText">Full scores:</string>
    <string name="aboutHeader">About app:</string>

    <!-- Long text -->
    <string name="poweredBy"><b>Powered by:</b>\n
        Kotlin</string>
    <string name="madeIn"><b>Made in:</b>\n
        Android Studio</string>
    <string name="aboutDev"><b>Developed by:</b>\n
        Artyom Zyev\n
        (aka: TemanEdge95)
    </string>

    <!-- gamemodes -->
    <string-array name="gamemodes">
        <item>Classic</item>
        <item>Sandbox</item>
        <item>Adventure</item>
    </string-array>

    <!-- Full short description, for cards -->
    <string-array name="gmDescr">
        <item>Just a classic mode. Have fun.</item>
        <item>Like classic one, but with settings.</item>
        <item>Look at this new way to play minesweeper!</item>
    </string-array>

    <!-- For score menu -->
    <string-array name="scoreDescr">
        <item>Scores for classic mode</item>
        <item>Scores for sandbox mode</item>
        <item>Scores for adventure mode</item>
    </string-array>

    <!-- Full gamemode description -->
    <string-array name="gmFullDescr">
        <item>Classic mode includes some ready-to-play fields. Just pick 1 of them and play. Have fun!</item>
        <item>Sandbox mode includes lots of presets for you. Be careful with them, they can make your game hard enough.</item>
        <item>Adventure mode is a new way to play minesweeper. Have a nice play!</item>
    </string-array>

    <!-- For empty states -->
    <string name="emptyListView">No one played this mode</string>

    <!-- For Sandbox Mode Items -->
    <string name="FormText">Form of cells:</string>
    <string name="FormSquare">Square</string>
    <string name="FormHex">Hex</string>
    <string name="FormTriangle">Triangle</string>

    <string name="SizeText">Size:</string>
    <string name="SizeW">Width:</string>
    <string name="SizeH">Height:</string>

    <!-- Pause menu -->
    <string name="PauseMenuText">Paused</string>

</resources>
