<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonClearAccept"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/buttonClearAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonClearCancel"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlert" />

    <Button
        android:id="@+id/buttonClearCancel"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/buttonClearCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonClearAccept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlert" />

    <ImageView
        android:id="@+id/imageViewAlert"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_trophy_clear" />

    <TextView
        android:id="@+id/textViewAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/alertClear"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlert" />
</android.support.constraint.ConstraintLayout>